D/dask-gateway-rSt9rq4xGYF3d/dask-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-release-name-dask-gateway
  labels:
    app.kubernetes.io/name: dask-gateway
    helm.sh/chart: dask-gateway-2022.4.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 2022.4.0
    app.kubernetes.io/managed-by: Helm
    gateway.dask.org/instance: release-name-dask-gateway
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dask-gateway
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: gateway
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-release-name-dask-gateway
  labels:
    app.kubernetes.io/name: dask-gateway
    helm.sh/chart: dask-gateway-2022.4.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 2022.4.0
    app.kubernetes.io/managed-by: Helm
    gateway.dask.org/instance: release-name-dask-gateway
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: dask-gateway
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: traefik
  ports:
    - name: web
      targetPort: 8000
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-release-name-dask-gateway
  labels:
    app.kubernetes.io/name: dask-gateway
    helm.sh/chart: dask-gateway-2022.4.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 2022.4.0
    app.kubernetes.io/managed-by: Helm
    gateway.dask.org/instance: release-name-dask-gateway
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: dask-gateway
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dask-gateway
        helm.sh/chart: dask-gateway-2022.4.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: 2022.4.0
        app.kubernetes.io/managed-by: Helm
        gateway.dask.org/instance: release-name-dask-gateway
        app.kubernetes.io/component: controller
      annotations:
        checksum/configmap: 0cbbc4de72f1727bf4fe3f7f7c347f147a69689ec43d92b6cf90fbc246bac047
    spec:
      serviceAccountName: controller-release-name-dask-gateway
      volumes:
        - name: configmap
          configMap:
            name: controller-release-name-dask-gateway
      containers:
        - name: controller
          image: ghcr.io/dask/dask-gateway-server:2022.4.0
          imagePullPolicy: IfNotPresent
          args:
            - dask-gateway-server
            - kube-controller
            - --config
            - /etc/dask-gateway/dask_gateway_config.py
          volumeMounts:
            - mountPath: /etc/dask-gateway/
              name: configmap
          ports:
            - containerPort: 8000
              name: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-release-name-dask-gateway
  labels:
    app.kubernetes.io/name: dask-gateway
    helm.sh/chart: dask-gateway-2022.4.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 2022.4.0
    app.kubernetes.io/managed-by: Helm
    gateway.dask.org/instance: release-name-dask-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dask-gateway
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dask-gateway
        helm.sh/chart: dask-gateway-2022.4.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: 2022.4.0
        app.kubernetes.io/managed-by: Helm
        gateway.dask.org/instance: release-name-dask-gateway
        app.kubernetes.io/component: gateway
        hub.jupyter.org/network-access-hub: "true"
      annotations:
        checksum/configmap: 53297c4f26ddc5a061f085658d95b1653288a7ad5471582b97241eebed085f8a
        checksum/secret: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    spec:
      serviceAccountName: api-release-name-dask-gateway
      volumes:
        - name: configmap
          configMap:
            name: api-release-name-dask-gateway
      containers:
        - name: gateway
          image: ghcr.io/dask/dask-gateway-server:2022.4.0
          imagePullPolicy: IfNotPresent
          args:
            - dask-gateway-server
            - --config
            - /etc/dask-gateway/dask_gateway_config.py
          volumeMounts:
            - mountPath: /etc/dask-gateway/
              name: configmap
          env: null
          ports:
            - containerPort: 8000
              name: api
          livenessProbe:
            httpGet:
              path: /api/health
              port: api
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /api/health
              port: api
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-release-name-dask-gateway
  labels:
    app.kubernetes.io/name: dask-gateway
    helm.sh/chart: dask-gateway-2022.4.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 2022.4.0
    app.kubernetes.io/managed-by: Helm
    gateway.dask.org/instance: release-name-dask-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dask-gateway
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: traefik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dask-gateway
        helm.sh/chart: dask-gateway-2022.4.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: 2022.4.0
        app.kubernetes.io/managed-by: Helm
        gateway.dask.org/instance: release-name-dask-gateway
        app.kubernetes.io/component: traefik
    spec:
      serviceAccountName: traefik-release-name-dask-gateway
      terminationGracePeriodSeconds: 60
      containers:
        - name: traefik
          image: traefik:2.6.3
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 11096
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                "": NET_RAW
            readOnlyRootFilesystem: true
          args:
            - --global.checknewversion=False
            - --global.sendanonymoususage=False
            - --ping=true
            - --providers.kubernetescrd
            - --providers.kubernetescrd.labelselector=gateway.dask.org/instance=release-name-dask-gateway
            - --providers.kubernetescrd.throttleduration=2
            - --log.level=WARN
            - --entryPoints.traefik.address=:9000
            - --entryPoints.web.address=:8000
          ports:
            - name: traefik
              containerPort: 9000
            - name: web
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /ping
              port: 9000
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /ping
              port: 9000
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-release-name-dask-gateway
  labels:
    app.kubernetes.io/name: dask-gateway
    helm.sh/chart: dask-gateway-2022.4.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 2022.4.0
    app.kubernetes.io/managed-by: Helm
    gateway.dask.org/instance: release-name-dask-gateway
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: api-release-name-dask-gateway
          port: 8000
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: clusters-prefix-release-name-dask-gateway
  labels:
    app.kubernetes.io/name: dask-gateway
    helm.sh/chart: dask-gateway-2022.4.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 2022.4.0
    app.kubernetes.io/managed-by: Helm
    gateway.dask.org/instance: release-name-dask-gateway
spec:
  stripPrefixRegex:
    regex:
      - /clusters/[a-zA-Z0-9.-]+
